nav liste inline

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav id="navbar">
-            <ul>
+            <ul id="menu">
                 <li class="menu" > <a href="#home" >Home</a> </li>
                 <li class="menu"> <a href="#about" >About</a> </li>
                 <li class="menu"> <a href="#work" >Work</a> </li>
